[package]
name = "coffee_man"
version = "0.1.0"
authors = ["swpark6 <sewon1234@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "^0.4.2" }
rocket_contrib = { version = "^0.4.2" }
serde = { version = "^1.0.104", features = ["derive"] }