[package]
name = "coffee_man"
version = "0.1.0"
authors = ["swpark6 <sewon1234@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
serde = { version = "^1.0.104", features = ["derive"] }
serde_json = "1.0"
actix-web = "2.0"
actix-rt = "1.0"
mongodb = "0.9.0"